# thesis-msc

./: .gitignore  README.md  keycloack.java
did-web-server/: .env  .gitignore  Dockerfile  README.md  nginx.conf  owner.did  owner.jwk  person-did.json  person-vc-did-signed.json  person-vc-did.json  person-vp-signed.json  person.jwk  register_did.sh  start-server.sh
ion-test/: package-lock.json  package.json  tsconfig.json
ion-test/src/: index.ts
ipfs-config/: init-ipfs.sh
ipfs-gateway/: README.md  docker-compose.yml
issuer/: Dockerfile  README.md  next.config.ts  owner.jwk  package-lock.json  package.json  tailwind.config.ts
issuer-server/: app.js  package-lock.json  package.json
issuer/data/: issuerExample.json
issuer/server/: .env  .env.api  package-lock.json  package.json  tsconfig.json
issuer/src/: App.tsx  types.ts
random-tests/: LICENSE  cermaic-service.ts  compose.yaml  login-flow.md
random-tests/did-web-server/: owner.did  person-vp.json  (+1 more)
scripts/: README.md  package-lock.json  package.json
scripts/did_doc_updater/programs/did_doc_updater/: Cargo.toml
scripts/did_doc_updater/programs/did_doc_updater/src/: lib.rs
sol-test/: .env  README.md  package-lock.json  package.json  solana-wallet.json
verifier/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json
wallet/: .env  .gitignore  README.md  app.config.ts  app.json  background.js  content.js  kek.mjs  manifest.json  metro.config.js  package-lock.json  package.json  polyfill.js  popup.html  sample_website.html  tsconfig.json  vcs.json  webpack.config.js
(+91 files in other folders)
